# strava-marimo-analyzer

./: .gitignore  Justfile  README copy.md  README.md  app.py  pyproject.toml
.github/workflows/: main-lint-test.yaml  publish.yaml
mocked_data/: README.md  mocked_activities.json  mocked_activity.json  mocked_streams.json
